# fin-analyst-agent

./: .dockerignore  .env.example  .replit  Dockerfile  README.md  app.py  docker-commands.sh  docker-compose.yml  github_test.md  main.py  models.py  pyproject.toml  start_mcp_client.py  start_mcp_server.py  test_anthropic.py  test_api.py  test_finHackers.py
agents/: news_agent.py  politician_agent.py  social_media_aggregator.py  trump_agent.py  volume_spike_agent.py
aminrasooli/: .gitignore  README.md  app.py
aminrasooli/agents/: trump_agent.py
aminrasooli/data/: mock_data.py
aminrasooli/templates/: fundamentals.html  politician_trades.html  social_media_overview.html  technical_analysis.html
attached_assets/: Pasted-Create-a-Python-app-that-does-the-following-Build-a-simple-Flask-web-server-with-a-modern-clean-1745689827463.txt  Pasted-Data-Gathering-Layer-MCP-Server-Build-a-Python-based-server-to-fetch-and-stream-data-from-multipl-1745706512768.txt  Pasted-Data-Gathering-Layer-MCP-Server-Build-a-Python-based-server-to-fetch-and-stream-data-from-multipl-1745706562541.txt  Pasted-When-a-Ticker-Is-Entered-the-System-Should-Instantly-Company-Snapshot-Business-description-what--1745698742979.txt
fin-analyst-agent/: README.md  app.py  index.html  project_plan.md  requirements.txt
services/backend-api/: Dockerfile  main.py  requirements.txt
services/mcp-client/: Dockerfile  main.py  requirements.txt
services/mcp-server/: Dockerfile  main.py  requirements.txt
static/: tailwind.config.ts
templates/: base.html  fundamentals.html  index.html  sentiment.html
(+15 files in other folders)
